Tried implementing a side text window

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<li>Organized meetings with group members</li>
 			<li>Delivered clear report on device's functionality, including Excel charts and tables</li>
 		</ul>
-		<p><em>Iterative Design Project, Team member</em></p>
+		<table><th><em>Iterative Design Project, Team member</em></p></table>
 		<ul>
 			<li>Drafted designs of picture frame with Solidworks software</li>
 		</ul>
@@ -101,20 +101,11 @@
 			<li>Coded in MATLAB for mathematical simulations</li>
 			<li>Created intelligent database-sorting software with team</li>
 		</ul>
-		<p><strong>Embedded Systems and the Internet of Things</strong></p>
+		<table><th><strong>Embedded Systems and the Internet of Things</strong></p></table>
 		<ul>
 			<li>Physical wiring and digital programming with Arduino and C language</li>
 			<li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
 		</ul>
-		<p><strong>CompTIA A+</strong></p>
-		<p><em>Online Course Completed</em></p>
-		<p>Simple hardware knowledge</p>
-		<p><strong>CompTIA Linux+</strong></p>
-		<p><em>Online Course Completed</em></p>
-		<p>Basic Linux knowledge</p>
-		<p><strong>CompTIA Network+</strong></p>
-		<p><em>Online Course Completed</em></p>
-		<p>Basic computer network and security knowledge</p>
 		<table>
 			<tr>
 				<th>Advanced Introduction to Computer Science</th>
@@ -131,10 +122,19 @@
 				<td>Aug-Dec 2019</td>
 			</tr>
 		</table>
-		<p><strong>Fundamentals of Web Design</strong></p>
+		<table><th><strong>Fundamentals of Web Design</strong></th></table>
 		<ul>
 			<li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
 		</ul>
+		<p><strong>CompTIA A+</strong></p>
+		<p><em>Online Course Completed</em></p>
+		<p>Simple hardware knowledge</p>
+		<p><strong>CompTIA Linux+</strong></p>
+		<p><em>Online Course Completed</em></p>
+		<p>Basic Linux knowledge</p>
+		<p><strong>CompTIA Network+</strong></p>
+		<p><em>Online Course Completed</em></p>
+		<p>Basic computer network and security knowledge</p>
 	</div>
 	<div class="experience">
 		<h2 class="official"><em>Employment</em></h2>
@@ -201,7 +201,7 @@
 			</tr>
 		</table>
 	</div>
-	<div id="college">
+	<div id="block">
 		<h2 class="official"><em>Skills</em></h2>
 		<p><em>Computer:</em></p>
 		<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
