--- a/index.html
+++ b/index.html
@@ -202,9 +202,22 @@
 		</table>
 	</div>
 	<div id="block">
-		<h2 class="official"><em>Skills</em></h2>
+		<h2 class="education"><em>Skills</em></h2>
 		<p><em>Computer:</em></p>
-		<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
+		<ul>
+			<li>Microsoft Office</li>
+			<li>Solidworks</li>
+			<li>Vernier Graphical Analysis</li>
+			<li>MATLAB</li>
+			<li>Java</li>
+			<li>Python</li>
+			<li>C</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+			<li>jQuery</li>
+			<li>GitHub</li>
+		</ul>
 	</div>
 	<hr>
 </body>
