Moved blocks up

--- a/index.html
+++ b/index.html
@@ -9,6 +9,24 @@
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 <body id="wrapper">
+	<div class="block">
+		<h2 class="education"><em>Skills</em></h2>
+		<p><em>Computer:</em></p>
+		<ul>
+			<li>Microsoft Office</li>
+			<li>Solidworks</li>
+			<li>Vernier Graphical Analysis</li>
+			<li>MATLAB</li>
+			<li>Java</li>
+			<li>Python</li>
+			<li>C</li>
+			<li>HTML</li>
+			<li>CSS</li>
+			<li>JavaScript</li>
+			<li>jQuery</li>
+			<li>GitHub</li>
+		</ul>
+	</div>
 	<nav>
 		<ul>
 			<li><a href="index.html">Home</a></li>
@@ -201,24 +219,5 @@
 			</tr>
 		</table>
 	</div>
-	<div id="block">
-		<h2 class="education"><em>Skills</em></h2>
-		<p><em>Computer:</em></p>
-		<ul>
-			<li>Microsoft Office</li>
-			<li>Solidworks</li>
-			<li>Vernier Graphical Analysis</li>
-			<li>MATLAB</li>
-			<li>Java</li>
-			<li>Python</li>
-			<li>C</li>
-			<li>HTML</li>
-			<li>CSS</li>
-			<li>JavaScript</li>
-			<li>jQuery</li>
-			<li>GitHub</li>
-		</ul>
-	</div>
-	<hr>
 </body>
 </html>
