--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	</div>
 	<div class="experience">
 		<h2 class="official"><em>Employment</em></h2>
-		<table id="data">
+		<table>
 			<tr>
 				<th>Company</th>
 				<th>Position</th>
@@ -191,7 +191,7 @@
 	</div>
 	<div>
 		<h2 class="official"><em>Activities</em></h2>
-		<table id="data">
+		<table>
 			<tr>
 				<th>Specialty</th>
 				<th>Organization</th>
