--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="wrapper">
 	<div class="block">
-		<h2 class="education"><em>Skills</em></h2>
+		<h2 class="heavySharp"><em>Skills</em></h2>
 		<p><em>Computer:</em></p>
 		<ul>
 			<li>Microsoft Office</li>
