included margin on small data

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
 	<hr>
-	<main class="education" id="college">
+	<main class="education" id="dottedBox">
 		<h2 class="official"><em>Education</em></h2>
 		<div>
 			<h3>Illinois Institute of Technology</h3>
@@ -73,7 +73,7 @@
 			</table>
 		</div>
 	</main>
-	<div class="experience">
+	<div class="defaultDiv">
 		<h2 class="official"><em>Experience</em></h2>
 		<table>
 			<tr>
@@ -154,7 +154,7 @@
 		<p><em>Online Course Completed</em></p>
 		<p>Basic computer network and security knowledge</p>
 	</div>
-	<div class="experience">
+	<div class="defaultDiv">
 		<h2 class="official"><em>Employment</em></h2>
 		<table>
 			<tr>
