--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
 	<hr>
-	<main class="education" id="dottedBox">
+	<main class="heavySharp" id="dottedBox">
 		<h2 class="official"><em>Education</em></h2>
 		<div>
 			<h3>Illinois Institute of Technology</h3>
