included table rows

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<li>Organized meetings with group members</li>
 			<li>Delivered clear report on device's functionality, including Excel charts and tables</li>
 		</ul>
-		<table><th><em>Iterative Design Project, Team member</em></p></table>
+		<table><tr><th><em>Iterative Design Project, Team member</em></th></tr></table>
 		<ul>
 			<li>Drafted designs of picture frame with Solidworks software</li>
 		</ul>
@@ -119,7 +119,7 @@
 			<li>Coded in MATLAB for mathematical simulations</li>
 			<li>Created intelligent database-sorting software with team</li>
 		</ul>
-		<table><th><strong>Embedded Systems and the Internet of Things</strong></p></table>
+		<table><tr><th><strong>Embedded Systems and the Internet of Things</strong></th></tr></table>
 		<ul>
 			<li>Physical wiring and digital programming with Arduino and C language</li>
 			<li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
@@ -140,7 +140,7 @@
 				<td>Aug-Dec 2019</td>
 			</tr>
 		</table>
-		<table><th><strong>Fundamentals of Web Design</strong></th></table>
+		<table><tr><th><strong>Fundamentals of Web Design</strong></th></tr></table>
 		<ul>
 			<li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
 		</ul>
