--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Project 1</title>
-	<link href="style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="styleWithQueries.css" rel="stylesheet" type="text/css" media="all">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
