Unified the style more

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 			</tr>
 		</table>
 	</div>
-	<div>
+	<div class="defaultDiv">
 		<h2 class="official"><em>Activities</em></h2>
 		<table>
 			<tr>
