--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<li><a href="hobbies.html">Hobbies</a></li>
 		</ul>
 	</nav>
-	<div id="nav-button" onclick="displayNav()"></div>
+	<div id="nav-button" onclick="displayNav()"><p>Menu</p></div>
 	<header id="resume">
 		<h1>Patrick Crowe</h1>
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
