Linked javascript and wrote functions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+	<script src="javascript/script.js"></script>
 </head>
 <body id="wrapper">
 	<div class="block">
@@ -28,8 +29,8 @@
 			<li>GitHub</li>
 		</ul>
 	</div>
-	<nav>
-		<ul>
+	<nav class="dropdownNav">
+		<ul id="linkListHolder" class="dropdownLinks">
 			<li><a href="index.html">Home</a></li>
 			<li><a href="pictures.html">Pictures</a></li>
 			<li><a href="hobbies.html">Hobbies</a></li>
