--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<li>GitHub</li>
 		</ul>
 	</div>
-	<div id="nav-button" onmousedown="displayNav()"><p>Menu</p></div>
+	<div id="nav-button" onclick="displayNav()"><p>Menu</p></div>
 	<nav class="dropdownNav">
 		<ul id="linkListHolder" class="dropdownLinks">
 			<li><a href="index.html">Home</a></li>
