--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
-	<p <!--id="nav-button" onclick="displayNav()"-->>Menu</p>
+	<p onclick="displayNav()">Menu</p>
 	<hr>
 	<main class="heavySharp" id="dottedBox">
 		<h2 class="official"><em>Education</em></h2>
