It's also importatnt to note that the position is relative

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
-	<div id="nav-button" onclick="displayNav()" style="height: 300px; width: 300px;">Menu</div>
+	<div id="nav-button" onclick="displayNav()" style="height: 300px; width: 300px; position: relative">Menu</div>
 	<hr>
 	<main class="heavySharp" id="dottedBox">
 		<h2 class="official"><em>Education</em></h2>
