--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 			<li><a href="hobbies.html">Hobbies</a></li>
 		</ul>
 	</nav>
+	<div id="sandwich" onclick="displayNav()" style="display: block; margin: 0 auto;">Menu</div>
 	<header id="resume">
 		<h1>Patrick Crowe</h1>
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
-	<div id="sandwich" onclick="displayNav()" style="display: inline">Menu</div>
+
 	<hr>
 	<main class="heavySharp" id="dottedBox">
 		<h2 class="official"><em>Education</em></h2>
