--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<li><a href="hobbies.html">Hobbies</a></li>
 		</ul>
 	</nav>
-	<div id="sandwich" onclick="displayNav()" style="display: block; margin: 0 auto;">Menu</div>
+	<div id="sandwich" onclick="displayNav()">Menu</div>
 	<header id="resume">
 		<h1>Patrick Crowe</h1>
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
