--- a/pictures.html
+++ b/pictures.html
@@ -3,11 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Pictures</title>
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+	<link href="css/styleWithQueries.css" rel="stylesheet" type="text/css" media="all">
 	<link href="css/reset.css" rel="stylesheet" type="text/css" media="all">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+	<script src="javascript/script.js"></script>
 </head>
 <body id="fluid">
 	<nav>	
@@ -41,5 +42,46 @@
 		<img src="media/spotify.PNG" class="pic">
 		<figcaption class="handwriting">I listen to alternative rock, but I'm constantly trying to expand my music taste. Currently, my favorite artists include Muse, Hobo Johnson, AWOLNATION, Watsky, Hozier, Electric Light Orchestra, and Steam Powered Giraffe. I took piano lessons for about 10 years and a couple years of voice lessons on top of that, but I don't really read sheet music anymore. If I want to play something, I try listening to it first and then recreating it on the piano. Chords are more fun than cadences, in my opinion.</figcaption>
 	</figure>
+	
+	<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+		<div class="mySlides fade">
+			<div class="numbertext">1 / 4</div>
+			<img src="media/archie.jpg" style="width:100%">
+			<div class="text">My gf's cat, Archie</div>
+		</div>
+
+		<div class="mySlides fade">
+			<div class="numbertext">2 / 4</div>
+			<img src="media/pup.jpg" style="width:100%">
+			<div class="text">My dog, Roxy</div>
+		</div>
+
+		<div class="mySlides fade">
+			<div class="numbertext">3 / 4</div>
+			<img src="media/shadow.jpg" style="width:100%">
+			<div class="text">My friend's cat, Shadow</div>
+		</div>
+		
+		<div class="mySlides fade">
+			<div class="numbertext">4 / 4</div>
+			<img src="media/shadow.jpg" style="width:100%">
+			<div class="text">My dog, Roxy</div>
+		</div>
+
+  <!-- Next and previous buttons -->
+		<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		<a class="next" onclick="plusSlides(1)">&#10095;</a>
+	</div>
+
+
+	<!-- The dots/circles -->
+	<div style="text-align:center">
+		<span class="dot" onclick="currentSlide(1)"></span>
+		<span class="dot" onclick="currentSlide(2)"></span>
+		<span class="dot" onclick="currentSlide(3)"></span>
+		<span class="dot" onclick="currentSlide(4)"></span>
+	</div>
 </body>
 </html>
