--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="pictures.html">Pictures</a></li>
 			<li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
 	<div class="sandwich" onclick="displayNav()">Menu</div>
