--- a/pictures.html
+++ b/pictures.html
@@ -16,6 +16,7 @@
 			<li><a href="index.html">Home</a></li>
 			<li><a href="pictures.html">Pictures</a></li>
 			<li><a href="hobbies.html">Hobbies</a></li>
+			<li><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
 	<hr>
