corrected dropdown links (I don't know if it's going to use script anymore)

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 	</div>
 	
 	<nav class="dropdownNav">
-		<ul id="linkListHolder" class="dropdownLinks">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="pictures.html">Pictures</a></li>
-			<li><a href="hobbies.html">Hobbies</a></li>
-			<li><a href="map.html">Map API</a></li>
+		<ul id="linkListHolder">
+			<li class="dropdownLinks"><a href="index.html">Home</a></li>
+			<li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
+			<li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
+			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
 	<div class="sandwich" onclick="displayNav()">Menu</div>
