--- a/map.html
+++ b/map.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="initial-scale=1.0">
 	<title>Map</title>
 	<link href="css/styleWithQueries.css" rel="stylesheet" type="text/css" media="all">
 	<link href="css/reset.css" rel="stylesheet" type="text/css" media="all">
@@ -21,5 +22,6 @@
 			<li><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
+	<div id="map"><script>initMap();</script></div>
 </body>
 </html>
