Every page has the same dynamic menu

--- a/hobbies.html
+++ b/hobbies.html
@@ -14,10 +14,10 @@
 	<p class="block" id="smallData">I got the idea for this game when I was on a walk. Separating from indoors felt freeing, but I couldn't tell why, so I toyed with the idea of bringing the outdoors indoors. If I could do that, the juxtaposition between inside and outside might reveal some insight. My goal is to make every path I walk digital. I want to make a world feel infinite, but planned, like how I see planet earth in real life. Too many virtual worlds are infinite, but random, which feels fragile. Or the worlds that have care and attention given to them get too complicated to be very big. My strategy when I just upload pictures online gives me the freedom to continuously expand the map of our world without overloading resources.</p>
 	<nav>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="pictures.html">Pictures</a></li>
-			<li><a href="hobbies.html">Hobbies</a></li>
-			<li><a href="map.html">Map API</a></li>
+			<li class="dropdownLinks"><a href="index.html">Home</a></li>
+			<li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
+			<li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
+			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
 	<hr>
