--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body id="wrapper">
 	<div class="block">
 		<h2 class="heavySharp"><em>Skills</em></h2>
-		<p><em>Computer:</em></p>
 		<ul>
 			<li>Microsoft Office</li>
 			<li>Solidworks</li>
@@ -51,12 +50,12 @@
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
-					<td><p>Major: Computer Science</p></td>
+					<td>Major: Computer Science</td>
 					<td>----</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td><p>GPA: 3.6</p></td>
+					<td>GPA: 3.6</td>
 					<td>----</td>
 					<td>May 2022</td>
 				</tr>
@@ -66,12 +65,12 @@
 			<h3>Benet Academy</h3>
 			<table>
 				<tr>
-					<td><p>ACT: 33</p></td>
+					<td>ACT: 33</td>
 					<td>----</td>
 					<td>Lisle, IL</td>
 				</tr>
 				<tr>
-					<td><p>GPA: 4.0</p></td>
+					<td>GPA: 4.0</td>
 					<td>----</td>
 					<td>June 2018</td>
 				</tr>
