--- a/map.html
+++ b/map.html
@@ -16,10 +16,10 @@
 <body>
 	<nav>
 		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="pictures.html">Pictures</a></li>
-			<li><a href="hobbies.html">Hobbies</a></li>
-			<li><a href="map.html">Map API</a></li>
+			<li class="dropdownLinks"><a href="index.html">Home</a></li>
+			<li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
+			<li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
+			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
 	<div id="map"><script>initMap();</script></div>
