redo last commit

--- a/map.html
+++ b/map.html
@@ -22,6 +22,8 @@
 			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
-	<div id="map"><script>initMap();</script></div>
+	<div id="map">	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+  type="text/javascript"></script>
+	<script src="javascript/script.js"></script></div>
 </body>
 </html>
