--- a/pictures.html
+++ b/pictures.html
@@ -49,25 +49,25 @@
   <!-- Full-width images with number and caption text -->
 		<div class="mySlides fade">
 			<div class="numbertext">1 / 4</div>
-			<img class="pic" src="media/archie.JPG">
+			<img class="picShow" src="media/archie.JPG">
 			<div class="text">My gf's cat, Archie</div>
 		</div>
 
 		<div class="mySlides fade">
 			<div class="numbertext">2 / 4</div>
-			<img class="pic" src="media/Pup.jpg">
+			<img class="picShow" src="media/Pup.jpg">
 			<div class="text">My dog, Roxy</div>
 		</div>
 
 		<div class="mySlides fade">
 			<div class="numbertext">3 / 4</div>
-			<img class="pic" src="media/shadow.JPG">
+			<img class="picShow" src="media/shadow.JPG">
 			<div class="text">My friend's cat, Shadow</div>
 		</div>
 		
 		<div class="mySlides fade">
 			<div class="numbertext">4 / 4</div>
-			<img class="pic" src="media/dog.JPG">
+			<img class="picShow" src="media/dog.JPG">
 			<div class="text">My dog, Roxy</div>
 		</div>
 
