gave canvas a container

--- a/map.html
+++ b/map.html
@@ -22,6 +22,6 @@
 			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
-	<div id="map"><div id="canvas"></div></div>
+	<div id="container"><div id="canvas"></div></div>
 </body>
 </html>
