made map exactly like demo

--- a/map.html
+++ b/map.html
@@ -2,7 +2,6 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="initial-scale=1.0">
 	<title>Map</title>
 	<link href="css/styleWithQueries.css" rel="stylesheet" type="text/css" media="all">
 	<link href="css/reset.css" rel="stylesheet" type="text/css" media="all">
@@ -22,6 +21,8 @@
 			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
-	<div id="container"><div id="canvas"></div></div>
+	<div id="container">
+		<div id="canvas"></div>
+	</div>
 </body>
 </html>
