--- a/map.html
+++ b/map.html
@@ -21,7 +21,7 @@
 	<div id="container">
 		<div id="canvas"></div>
 	</div>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=init"
   type="text/javascript"></script>
 	<script async type="text/javascript" src="javascript/script.js"></script>
 </body>
