--- a/map.html
+++ b/map.html
@@ -8,6 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+  type="text/javascript"></script>
+	<script async type="text/javascript" src="javascript/script.js"></script>
 </head>
 <body>
 	<nav>
@@ -21,8 +24,5 @@
 	<div id="container">
 		<div id="canvas"></div>
 	</div>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
-  type="text/javascript"></script>
-	<script type="text/javascript" src="javascript/script.js"></script>
 </body>
 </html>
