event listener is disabled

--- a/map.html
+++ b/map.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -21,6 +21,9 @@
 			<li class="dropdownLinks"><a href="map.html">Map API</a></li>
 		</ul>
 	</nav>
+	<div class="handwriting">
+		<p>This is a map of my neighborhood and where I photograph and compile into my game.</p>
+	</div>
 	<div id="container">
 		<div id="canvas"></div>
 	</div>
