--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 	<script async type="text/javascript" src="javascript/script.js"></script>
-	<script asyncS src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+	<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
   type="text/javascript"></script>
 </head>
 <body>
