no more initialize map. original java just comes after map java

--- a/map.html
+++ b/map.html
@@ -8,9 +8,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-	<script async type="text/javascript" src="javascript/script.js"></script>
-	<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+	<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo"
   type="text/javascript"></script>
+	<script async type="text/javascript" src="javascript/script.js"></script>
 </head>
 <body>
 	<nav>
