--- a/map.html
+++ b/map.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Map</title>
-	<link href="css/styleWithQueries.css" rel="stylesheet" type="text/css" media="all">
+	<link href="css/style.css" rel="stylesheet" type="text/css" media="all">
 	<link href="css/reset.css" rel="stylesheet" type="text/css" media="all">
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
