--- a/pictures.html
+++ b/pictures.html
@@ -47,25 +47,25 @@
 	<div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
-		<div class="mySlides fade">
+		<div class="mySlides">
 			<div class="numbertext">1 / 4</div>
 			<img class="picShow" src="media/archie.JPG">
 			<div class="text">My gf's cat, Archie</div>
 		</div>
 
-		<div class="mySlides fade">
+		<div class="mySlides">
 			<div class="numbertext">2 / 4</div>
 			<img class="picShow" src="media/Pup.jpg">
 			<div class="text">My dog, Roxy</div>
 		</div>
 
-		<div class="mySlides fade">
+		<div class="mySlides">
 			<div class="numbertext">3 / 4</div>
 			<img class="picShow" src="media/shadow.JPG">
 			<div class="text">My friend's cat, Shadow</div>
 		</div>
 		
-		<div class="mySlides fade">
+		<div class="mySlides">
 			<div class="numbertext">4 / 4</div>
 			<img class="picShow" src="media/dog.JPG">
 			<div class="text">My dog, Roxy</div>
