--- a/map.html
+++ b/map.html
@@ -25,7 +25,7 @@
 		<p>This is a map of my neighborhood and where I photograph and compile into my game.</p>
 	</div>
 	<div id="container">
-		<div id="canvas" onclick="showMap()"></div>
+		<div id="canvas"></div>
 	</div>
 </body>
 </html>
