--- a/map.html
+++ b/map.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-	<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo&callback=initMap"
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA9Mc1jyeOEQ6zjOHen-8Df9H0Qdi2F7Fo"
   ></script>
 	<script async src="javascript/script.js"></script>
 </head>
