filled in some attributes that should be null

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body id="wrapper">
-  
+<body>
+  <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
       <li class="dropdownLinks"><a href="index.html">Home</a></li>
@@ -222,6 +222,7 @@
       <li>jQuery</li>
       <li>GitHub</li>
     </ul>
+  </div>
   </div>
 </body>
 </html>
