--- a/pictures.html
+++ b/pictures.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script async src="javascript/script.js"></script>
 </head>
 <body id="fluid">
@@ -46,7 +47,7 @@
   
   <div class="slideshow-container">
 
-  <!-- Full-width images with number and caption text -->
+  <!-- Full-width images with number and caption text 
     <div class="mySlides fade">
       <div class="numbertext">1 / 4</div>
       <img src="media/archie.JPG" alt="cat">
@@ -69,11 +70,14 @@
       <div class="numbertext">4 / 4</div>
       <img src="media/dog.JPG" alt="dog">
       <div class="text">My dog, Roxy</div>
-    </div>
-
-  <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>-->
+    <div id="main-box" class="archie"></div>
+    <ul>
+      <li id="click1" onclick="plusSlides(-1)">1</li>
+      <li id="click2" onclick="plusSlides(1)">2</li>
+      <li id="click3">3</li>
+      <li id="click4">4</li>
+    </ul>
   </div>
 
 </body>
