--- a/pictures.html
+++ b/pictures.html
@@ -73,8 +73,8 @@
     </div>-->
     <div id="main-box" class="archie"></div>
     <ul>
-      <li id="click1" onclick="plusSlides(-1)">1</li>
-      <li id="click2" onclick="plusSlides(1)">2</li>
+      <li id="click1">1</li>
+      <li id="click2">2</li>
       <li id="click3">3</li>
       <li id="click4">4</li>
     </ul>
