gave buttons style

--- a/pictures.html
+++ b/pictures.html
@@ -73,10 +73,10 @@
     </div>-->
     <div id="main-box" class="archie"></div>
     <ul>
-      <li id="click1">1</li>
-      <li id="click2">2</li>
-      <li id="click3">3</li>
-      <li id="click4">4</li>
+      <li class="sliderButton" id="click1">1</li>
+      <li class="sliderButton" id="click2">2</li>
+      <li class="sliderButton" id="click3">3</li>
+      <li class="sliderButton" id="click4">4</li>
     </ul>
   </div>
 
