--- a/pictures.html
+++ b/pictures.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+ <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> -->
   <script async src="javascript/script.js"></script>
 </head>
 <body id="fluid">
