New link to root on index and resume

--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
     <div id="wrapper">
         <nav class="dropdownNav">
             <ul id="linkListHolder">
-                <li class="dropdownLinks"><a href="index.html">Home</a></li>
+                <li class="dropdownLinks"><a href="/">Home</a></li>
                 <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
                 <li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
                 <li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
