--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Project 1</title>
+  <title>Patrick Crowe's Hub</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
   <script src="javascript/script.js"></script>
 </head>
-<body>
+<body id="home">
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
