--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="wrapper">
   <nav class="dropdownNav">
     <ul id="linkListHolder">
-      <li class="dropdownLinks"><a href="/">Home</a></li>
+      <li class="dropdownLinks"><a href="/home">Home</a></li>
       <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
       <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
       <li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
