Filled out skeleton of projects page

--- a/projects.html
+++ b/projects.html
@@ -29,9 +29,68 @@
 
   <hr>
   <main id="projectsBody">
+    <h2>MATLAB</h2>
+    <p>Though I did some programming in MATLAB my freshman year, I do not regularly use it now.</p>
+    <p>I did, however, develop some pretty cool interactive charts for calculating student loan debt and investment options.
+      Check them out if you have a MATLAB environment!</p>
     <ul>
-        <li><a href="" download></a></li>
+        <li><a href="/projects/debtCalculatorF.zip" download></a>Debt Calculator (F)</li>
+        <li><a href="/projects/debtCalculator.zip" download></a>Debt Calculator</li>
+        <li><a href="/projects/debtTool.zip" download></a>Debt Tool</li>
+        <li><a href="/projects/loanAdder.zip" download></a>Loan Adder</li>
+        <li><a href="/projects/RetirementSavingsTool.zip" download></a>Retirement Savings Tool</li>
+        <li><a href="/projects/RetirementSavingsF.zip" download></a>Retirement Savings (F)</li>
+        <li><a href="/projects/RetirementSavings.zip" download></a>Retirement Savings</li>
     </ul>
+    <h2>Java</h2>
+    <p>Sophomore Year I broke into some more Java and built some software that updates and performs computations on
+      a spreadsheet of L stations. You can edit the number of stations in the table and compute the shortest route
+      between two points!</p>
+    <ul>
+        <li><a href="/projects/CTA_App.jar">Executable Jar</a></li>
+        <li><a href="/projects/CTA_App.zip">Zipped folder</a></li>
+        <li><a href="/projects/CTA_App/CTAStops.csv">L Station Spreadsheet</a> <em>(Note: you need this to run the .jar, just specify where you downloaded the file when the program asks you)</em></li>
+    </ul>
+    <p>As a Junior, I developed two java programs.</p>
+    <p>The first one I designed in conjunction with two of my classmates through GitHub (you can find our repository among my other
+      one repositories for the code listed here on my <a href="https://github.com/pcrowe22">GitHub</a>.) We built a parking meter program with Java and
+      PostgreSQL that features many options such as reserving your spot or running a report on monthly income for admin users.
+      Permissions are enforced and transactions are atomic.</p>
+    <ul>
+        <li><a href="/projects/ParkBase_App.jar">Executable Jar</a></li>
+        <li><a href="/projects/ParkBase.zip">Zipped folder</a></li>
+        <li><a href="/projects/data.zip">Tables for SQL database</a> <em>(Note: you need this to run the program. The software will read the csvs and create SQL tables with them.</em></li>
+    </ul>
+    <p>My second project was developed independently. It also uses SQL databases, but instead functions as help ticket software.
+      You can make requests, mark them as canceled, or edit them while they're in the database.</p>
+    <ul>
+        <li><a href="/projects/Tickets_FA20_runnable.jar">Executable Jar</a></li>
+        <li><a href="/projects/Tickets_FA20_PC.zip">Zipped folder</a></li>
+    </ul>
+    <p>Finally, the project I'm most proud of and use most is my node tracer app. The need for this came about as I was
+      exploring rabbit holes online and I kept getting lost. This software works for a particular website, <a href="http://www.scp-wiki.net/">SCP Containment Breach</a>
+      but I hope to expand its use for more. I'm able to blacklist certain links that blow up the stack trace and ignore
+      parts of the webpage that I know aren't relevant. I'm even working on save functionality that can save the traced links
+      in a nested structure that can be collapsed so that the text isn't too overwhelming to look at. Try it out for yourself if you
+      enjoy going down rabbit holes on the SCP database.</p>
+    <ul>
+        <li><a href="/projects/Scraper_Tree.jar">With Tree Functionality</a></li>
+        <li><a href="/projects/Scraper_NoTree.jar">Without Tree Functionality</a></li>
+    </ul>
+    <h2>Unity</h2>
+    <p>I almost forgot to mention that I was part of the VandyHacks 2021 Hackathon during the pandemic. Me and a group of 3 other guys
+      tried building an AR app that demonstrates chemical bonding through 3D models and ID cards. Turns out our computers were too
+      slow to simulate much, but not long after I built my own computer so that I could add as much RAM as I needed while 
+      writing and designing simulations with high-graphics. Take a look if you're interested.</p>
+    <ul>
+        <li><a href="/projects/Chemistry AR app.7z">7Zipped folder</a></li>
+    </ul>
+    <h2>Groovy</h2>
+    <p>I'm still writing the packages I'd like to put here. Should have some good stuff by the end of this semester!</p>
+    <h2>Swift</h2>
+    <p>I'm part of a group of students tasked with coding the controller for a remote telescop interface. This has been an ongoing
+      project for years so I likely won't have a link for you to download the package directly from me, but in some short years I may
+      have a repository I can link you to so that you can see the work me and the students at IIT have accomplished. Updates to come!</p>
   </main>
 </body>
 </html>
