--- a/projects.html
+++ b/projects.html
@@ -34,22 +34,22 @@
     <p>I did, however, develop some pretty cool interactive charts for calculating student loan debt and investment options.
       Check them out if you have a MATLAB environment!</p>
     <ul>
-        <li><a href="/projects/debtCalculatorF.zip" download></a>Debt Calculator (F)</li>
-        <li><a href="/projects/debtCalculator.zip" download></a>Debt Calculator</li>
-        <li><a href="/projects/debtTool.zip" download></a>Debt Tool</li>
-        <li><a href="/projects/loanAdder.zip" download></a>Loan Adder</li>
-        <li><a href="/projects/RetirementSavingsTool.zip" download></a>Retirement Savings Tool</li>
-        <li><a href="/projects/RetirementSavingsF.zip" download></a>Retirement Savings (F)</li>
-        <li><a href="/projects/RetirementSavings.zip" download></a>Retirement Savings</li>
+        <li><a href="/projects/debtCalculatorF.zip" download>Debt Calculator (F)</a></li>
+        <li><a href="/projects/debtCalculator.zip" download>Debt Calculator</a></li>
+        <li><a href="/projects/debtTool.zip" download>Debt Tool</a></li>
+        <li><a href="/projects/loanAdder.zip" download>Loan Adder</a></li>
+        <li><a href="/projects/RetirementSavingsTool.zip" download>Retirement Savings Tool</a></li>
+        <li><a href="/projects/RetirementSavingsF.zip" download>Retirement Savings (F)</a></li>
+        <li><a href="/projects/RetirementSavings.zip" download>Retirement Savings</a></li>
     </ul>
     <h2>Java</h2>
     <p>Sophomore Year I broke into some more Java and built some software that updates and performs computations on
       a spreadsheet of L stations. You can edit the number of stations in the table and compute the shortest route
       between two points!</p>
     <ul>
-        <li><a href="/projects/CTA_App.jar">Executable Jar</a></li>
-        <li><a href="/projects/CTA_App.zip">Zipped folder</a></li>
-        <li><a href="/projects/CTA_App/CTAStops.csv">L Station Spreadsheet</a> <em>(Note: you need this to run the .jar, just specify where you downloaded the file when the program asks you)</em></li>
+        <li><a href="/projects/CTA_App.jar" download>Executable Jar</a></li>
+        <li><a href="/projects/CTA_App.zip" download>Zipped folder</a></li>
+        <li><a href="/projects/CTA_App/CTAStops.csv" download>L Station Spreadsheet</a> <em>(Note: you need this to run the .jar, just specify where you downloaded the file when the program asks you)</em></li>
     </ul>
     <p>As a Junior, I developed two java programs.</p>
     <p>The first one I designed in conjunction with two of my classmates through GitHub (you can find our repository among my other
@@ -57,15 +57,15 @@
       PostgreSQL that features many options such as reserving your spot or running a report on monthly income for admin users.
       Permissions are enforced and transactions are atomic.</p>
     <ul>
-        <li><a href="/projects/ParkBase_App.jar">Executable Jar</a></li>
-        <li><a href="/projects/ParkBase.zip">Zipped folder</a></li>
-        <li><a href="/projects/data.zip">Tables for SQL database</a> <em>(Note: you need this to run the program. The software will read the csvs and create SQL tables with them.</em></li>
+        <li><a href="/projects/ParkBase_App.jar" download>Executable Jar</a></li>
+        <li><a href="/projects/ParkBase.zip" download>Zipped folder</a></li>
+        <li><a href="/projects/data.zip" download>Tables for SQL database</a> <em>(Note: you need this to run the program. The software will read the csvs and create SQL tables with them.</em></li>
     </ul>
     <p>My second project was developed independently. It also uses SQL databases, but instead functions as help ticket software.
       You can make requests, mark them as canceled, or edit them while they're in the database.</p>
     <ul>
-        <li><a href="/projects/Tickets_FA20_runnable.jar">Executable Jar</a></li>
-        <li><a href="/projects/Tickets_FA20_PC.zip">Zipped folder</a></li>
+        <li><a href="/projects/Tickets_FA20_runnable.jar" download>Executable Jar</a></li>
+        <li><a href="/projects/Tickets_FA20_PC.zip" download>Zipped folder</a></li>
     </ul>
     <p>Finally, the project I'm most proud of and use most is my node tracer app. The need for this came about as I was
       exploring rabbit holes online and I kept getting lost. This software works for a particular website, <a href="http://www.scp-wiki.net/">SCP Containment Breach</a>
@@ -74,8 +74,8 @@
       in a nested structure that can be collapsed so that the text isn't too overwhelming to look at. Try it out for yourself if you
       enjoy going down rabbit holes on the SCP database.</p>
     <ul>
-        <li><a href="/projects/Scraper_Tree.jar">With Tree Functionality</a></li>
-        <li><a href="/projects/Scraper_NoTree.jar">Without Tree Functionality</a></li>
+        <li><a href="/projects/Scraper_Tree.jar" download>With Tree Functionality</a></li>
+        <li><a href="/projects/Scraper_NoTree.jar" download>Without Tree Functionality</a></li>
     </ul>
     <h2>Unity</h2>
     <p>I almost forgot to mention that I was part of the VandyHacks 2021 Hackathon during the pandemic. Me and a group of 3 other guys
@@ -83,7 +83,7 @@
       slow to simulate much, but not long after I built my own computer so that I could add as much RAM as I needed while 
       writing and designing simulations with high-graphics. Take a look if you're interested.</p>
     <ul>
-        <li><a href="/projects/Chemistry AR app.7z">7Zipped folder</a></li>
+        <li><a href="/projects/Chemistry AR app.7z" download>7Zipped folder</a></li>
     </ul>
     <h2>Groovy</h2>
     <p>I'm still writing the packages I'd like to put here. Should have some good stuff by the end of this semester!</p>
