Saved pictures to index

--- a/resume.html
+++ b/resume.html
@@ -16,6 +16,7 @@
             <ul id="linkListHolder">
                 <li class="dropdownLinks"><a href="/home">Home</a></li>
                 <li class="dropdownLinks"><a href="resume.html">Resume</a></li>
+                <li class="dropdownLinks"><a href="projects.html">Projects</a></li>
                 <li class="dropdownLinks"><a href="pictures.html">Pictures</a></li>
                 <li class="dropdownLinks"><a href="hobbies.html">Hobbies</a></li>
                 <li class="dropdownLinks"><a href="map.html">Map API</a></li>
@@ -23,8 +24,8 @@
         </nav>
         <header id="resume">
             <h1>Patrick Crowe</h1>
-            <em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
-            <em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
+            <em>pcrowe@hawk.iit.edu | pcrowe.post@gmail.com | (630)-841-8896</em>
+            <em><a href="github.com/pcrowe22">github.com/pcrowe22</a></em>
         </header>
 
         <hr>
@@ -39,7 +40,7 @@
                         <td>Chicago, IL</td>
                     </tr>
                     <tr>
-                        <td>GPA: 3.6</td>
+                        <td>GPA: 3.9</td>
                         <td>----</td>
                         <td>May 2022</td>
                     </tr>
