Added course table

--- a/resume.html
+++ b/resume.html
@@ -63,6 +63,41 @@
             </div>
         </main>
         <div class="defaultDiv">
+            <h2 class="official"><em>Employment</em></h2>
+            <table>
+                <tr>
+                    <th>Company</th>
+                    <th>Position</th>
+                    <th>Time of Employment</th>
+                    <th>Location</th>
+                </tr>
+                <tr>
+                    <td>Pinstripes</td>
+                    <td>Server Assistant</td>
+                    <td>Sept 2019-Present</td>
+                    <td>Chicago, IL</td>
+                </tr>
+                <tr>
+                    <td>Capri of Downers Grove</td>
+                    <td>Host/Bus Boy</td>
+                    <td>May 2019-Aug 2019</td>
+                    <td>Downers Grove, IL</td>
+                </tr>
+                <tr>
+                    <td>South Dining Hall</td>
+                    <td>Kitchen Worker</td>
+                    <td>Aug 2018-May 2019</td>
+                    <td>Notre Dame, IN</td>
+                </tr>
+                <tr>
+                    <td>That Burger Joint</td>
+                    <td>Kitchen Worker,Cashier</td>
+                    <td>May 2018-Jan 2019</td>
+                    <td>Downers Grove, IL</td>
+                </tr>
+            </table>
+        </div>
+        <div class="defaultDiv">
             <h2 class="official"><em>Experience</em></h2>
             <table>
                 <tr>
@@ -144,37 +179,157 @@
             <p>Basic computer network and security knowledge</p>
         </div>
         <div class="defaultDiv">
-            <h2 class="official"><em>Employment</em></h2>
+            <h2 class="official"><em>Classes</em></h2>
             <table>
                 <tr>
-                    <th>Company</th>
-                    <th>Position</th>
-                    <th>Time of Employment</th>
-                    <th>Location</th>
+                    <th>Name</th>
+                    <th>Semester</th>
+                    <th>Course Number</th>
+                    <th>Field</th>
                 </tr>
                 <tr>
-                    <td>Pinstripes</td>
-                    <td>Server Assistant</td>
-                    <td>Sept 2019-Present</td>
-                    <td>Chicago, IL</td>
+                    <td>AP: Remote Telescope Commision</td>
+                    <td>Fall 2021</td>
+                    <td>IPRO 497</td>
+                    <td>Software Development</td>
                 </tr>
                 <tr>
-                    <td>Capri of Downers Grove</td>
-                    <td>Host/Bus Boy</td>
-                    <td>May 2019-Aug 2019</td>
-                    <td>Downers Grove, IL</td>
+                    <td>Mobile Applications Development</td>
+                    <td>Fall 2021</td>
+                    <td>CS 442</td>
+                    <td>Mobile Development</td>
                 </tr>
                 <tr>
-                    <td>South Dining Hall</td>
-                    <td>Kitchen Worker</td>
-                    <td>Aug 2018-May 2019</td>
-                    <td>Notre Dame, IN</td>
+                    <td>Advanced Computer Security</td>
+                    <td>Fall 2021</td>
+                    <td>CS 558</td>
+                    <td>Cybersecurity</td>
                 </tr>
                 <tr>
-                    <td>That Burger Joint</td>
-                    <td>Kitchen Worker,Cashier</td>
-                    <td>May 2018-Jan 2019</td>
-                    <td>Downers Grove, IL</td>
+                    <td>Computers and Society</td>
+                    <td>Fall 2021</td>
+                    <td>CS 485</td>
+                    <td>Ethics</td>
+                </tr>
+                <tr>
+                    <td>Intro to Information Security</td>
+                    <td>Spring 2021</td>
+                    <td>CS 458</td>
+                    <td>Cybersecurity</td>
+                </tr>
+                <tr>
+                    <td>Programming Languages and Translators</td>
+                    <td>Spring 2021</td>
+                    <td>CS 440</td>
+                    <td>Low Level Programming</td>
+                </tr>
+                <tr>
+                    <td>Operating Systems</td>
+                    <td>Spring 2021</td>
+                    <td>CS 450</td>
+                    <td>Low Level Programming</td>
+                </tr>
+                <tr>
+                    <td>Economic Analysis of Capital Investments</td>
+                    <td>Spring 2021</td>
+                    <td>ECON 423</td>
+                    <td>Economics</td>
+                </tr>
+                <tr>
+                    <td>Number Theory</td>
+                    <td>Spring 2021</td>
+                    <td>MATH 410</td>
+                    <td>Cyber Security</td>
+                </tr>
+                <tr>
+                    <td>Intermediate Software Development</td>
+                    <td>Fall 2020</td>
+                    <td>ITMD 411</td>
+                    <td>Software Development</td>
+                </tr>
+                <tr>
+                    <td>Database Organization</td>
+                    <td>Fall 2020</td>
+                    <td>CS 425</td>
+                    <td>Software Development</td>
+                </tr>
+                <tr>
+                    <td>Systems Programming</td>
+                    <td>Fall 2020</td>
+                    <td>CS 351</td>
+                    <td>Low Level Programming</td>
+                </tr>
+                <tr>
+                    <td>Introduction to Algorithms</td>
+                    <td>Fall 2020</td>
+                    <td>CS 430</td>
+                    <td>Software Analysis</td>
+                </tr>
+                <tr>
+                    <td>Human Motivation and Emotion</td>
+                    <td>Fall 2020</td>
+                    <td>PSYC 312</td>
+                    <td>Ethics</td>
+                </tr>
+                <tr>
+                    <td>Discrete Structures</td>
+                    <td>Spring 2020</td>
+                    <td>CS 330</td>
+                    <td>Software Analysis</td>
+                </tr>
+                <tr>
+                    <td>Data Structures and Algorithms</td>
+                    <td>Spring 2020</td>
+                    <td>CS 331</td>
+                    <td>Software Analysis</td>
+                </tr>
+                <tr>
+                    <td>Computer Organization and Assembly Language Programming</td>
+                    <td>Spring 2020</td>
+                    <td>CS 350</td>
+                    <td>Low Level Programming</td>
+                </tr>
+                <tr>
+                    <td>Technical Communication</td>
+                    <td>Spring 2020</td>
+                    <td>COM 421</td>
+                    <td>Professionalism</td>
+                </tr>
+                <tr>
+                    <td>Philosophy of Mind</td>
+                    <td>Spring 2020</td>
+                    <td>PHIL 342</td>
+                    <td>Ethics</td>
+                </tr>
+                <tr>
+                    <td>Fundamentals of Web Development</td>
+                    <td>Fall 2019</td>
+                    <td>ITMD 361</td>
+                    <td>Web Development</td>
+                </tr>
+                <tr>
+                    <td>Probability and Statistics</td>
+                    <td>Fall 2019</td>
+                    <td>MATH 474</td>
+                    <td>Software Analysis</td>
+                </tr>
+                <tr>
+                    <td>Accelerated Intro to Computer Science</td>
+                    <td>Fall 2019</td>
+                    <td>CS 201</td>
+                    <td>Software Development</td>
+                </tr>
+                <tr>
+                    <td>Intro to Psychological Science</td>
+                    <td>Fall 2019</td>
+                    <td>PSYC 221</td>
+                    <td>Ethics</td>
+                </tr>
+                <tr>
+                    <td>Interactive Storytelling</td>
+                    <td>Fall 2019</td>
+                    <td>HUM 372</td>
+                    <td>Software Development</td>
                 </tr>
             </table>
         </div>
