Made images figures

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       explored. Like I said, I'm part internet literature detective, so I've seen some pretty crazy stuff out there while exploring.</p>
      <p>Safe travels, adventurer.</p>
   </main>
-    <aside>
-        <img href="/media/Chicago.JPG"/>
-        <img href="/media/Fall.JPG" />
-        <img href="fav albums 6-10-21.png" />
-        <img href="L.JPG" />
-        <img href="P1.JPG" />
-        <img href="P2.JPG" />
-        <img href="Pup.jpg" />
-    </aside>
+  <aside>
+      <figure><img href="/media/Chicago.JPG" /></figure>
+      <figure><img href="/media/Fall.JPG" /></figure>
+      <figure><img href="fav albums 6-10-21.png" /></figure>
+      <figure><img href="L.JPG" /></figure>
+      <figure><img href="P1.JPG" /></figure>
+      <figure><img href="P2.JPG" /></figure>
+      <figure><img href="Pup.jpg" /></figure>
+  </aside>
 </body>
 </html>
